fixed horizontal overflow of page due to large img

--- a/css/main.css
+++ b/css/main.css
@@ -448,3 +448,7 @@ pre {
 .repo-link {
   margin-top: 30px;
 }
+html, body {
+    max-width: 100%;
+    overflow-x: hidden;
+}
